- refactor eservice checkCf and AddressAnpr
