# docs/openapi/pn-anpr-residence-v1.yaml
@@ -7,22 +7,22 @@ info:
 servers:
 - url: http://127.0.0.1
 tags:
-- name: consultaResidenzaANPR
+- name: getAddressANPR
   description: Il servizio viene invocato per ottenere la residenza presente in ANPR per un cittadino, alla data di riferimento della richiesta.
 paths:
-  /consultaResidenzaANPR:
+  /getAddressANPR:
     post:
       tags:
-      - consultaResidenzaANPR
+      - getAddressANPR
       summary: 'Il servizio viene invocato per ottenere la residenza presente in ANPR per un cittadino, alla data di riferimento della richiesta'
       description: 'Il servizio viene invocato per ottenere la residenza presente in ANPR per un cittadino, alla data di riferimento della richiesta'
-      operationId: consultaResidenzaANPR
+      operationId: getAddressANPR
       requestBody:
         description: Il servizio viene invocato per ottenere la residenza presente in ANPR per un cittadino, alla data di riferimento della richiesta
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ConsultaResidenzaANPRRequestBody'
+              $ref: '#/components/schemas/GetAddressANPRRequestBody'
         required: true
       responses:
         "200":
@@ -30,184 +30,60 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ConsultaResidenzaANPROK'
+                $ref: '#/components/schemas/GetAddressANPROK'
         "400":
           description: Caso d'uso invalido
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ConsultaResidenzaANPRError'
+                $ref: '#/components/schemas/GetAddressANPRError'
         "404":
           description: Caso d'uso non trovato
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ConsultaResidenzaANPRError'        
+                $ref: '#/components/schemas/GetAddressANPRError'        
         "500":
           description: Internal server error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ConsultaResidenzaANPRError'                
+                $ref: '#/components/schemas/GetAddressANPRError'                
 components:
   schemas:
-    ConsultaResidenzaANPRRequestBody:
+    GetAddressANPRRequestBody:
       type: object
       properties:
         filter:
           type: object
           properties:
-            codiceFiscale:
+            taxId:
               type: string
-    ConsultaResidenzaANPROK:
+    GetAddressANPROK:
       type: object
       properties:
-        residenza:
-          $ref: '#/components/schemas/Residenza'
-    Residenza:
-      type: array
-      items:
-        type: object
-        properties:
-          tipoIndirizzo:
-            type: string
-          noteIndirizzo:
-            type: string
-          indirizzo:
-            $ref: '#/components/schemas/Indirizzo'
-          localitaEstera:
-            $ref: '#/components/schemas/LocalitaEstera'
-          presso:
-            type: string
-          dataRicorrenzaResidenza:
-            type: string
-    Indirizzo:
-      type: object
-      properties:
-        cap:
-          type: string
-        comune:
-          $ref: '#/components/schemas/Comune'
-        frazione:
-          type: string
-        toponimo:
-          $ref: '#/components/schemas/Toponimo'
-        numeroCivico:
-          $ref: '#/components/schemas/NumeroCivico'
-    LocalitaEstera:      
-      type: object
-      properties:
-        indirizzoEstero:
-          $ref: '#/components/schemas/IndirizzoEstero'
-        consolato:
-          $ref: '#/components/schemas/Consolato'
-    Comune:
-      type: object
-      properties:
-        nomeComune:
-          type: string
-        codiceIstat:
-          type: string
-        siglaProvinciaIstat:
-          type: string
-        descrizioneLocalita:
-          type: string
-    Toponimo:
-      type: object
-      properties:
-        codSpecie:
-          type: string
-        specie:
-          type: string
-        specieFonte:
-          type: string
-        codToponimo:
-          type: string
-        denominazioneToponimo:
-          type: string
-        toponimoFonte:
-          type: string
-    NumeroCivico:
-      type: object
-      properties:
-        codiceCivico:
-          type: string
-        civicoFonte:
-          type: string
-        numero:
-          type: string
-        metrico:
-          type: string
-        progSNC:
-          type: string
-        lettera:
-          type: string
-        esponente1:
-          type: string
-        colore:
-          type: string
-        civicoInterno:
-          $ref: '#/components/schemas/CivicoInterno'
-    CivicoInterno:
-      type: object
-      properties:
-        corte:
-          type: string
-        scala:
-          type: string
-        interno1:
-          type: string
-        espInterno1:
-          type: string
-        interno2:
-          type: string
-        espInterno2:
-          type: string
-        scalaEsterna:
-          type: string
-        secondario:
-          type: string
-        piano:
-          type: string
-        nui:
-          type: string
-        isolato:
-          type: string
-    IndirizzoEstero:
-      type: object
-      properties:
-        cap:
-          type: string
-        localita:
-          $ref: '#/components/schemas/Localita'
-        toponimo:
-          $ref: '#/components/schemas/ToponimoEstero'
-    Localita:
-      type: object
-      properties:
-        descrizioneLocalita:
-          type: string
-        descrizioneStato:
-          type: string
-        codiceStato:
-          type: string
-        provinciaContea:
-          type: string
-    ToponimoEstero:
-      type: object
-      properties:
-        denominazione:
-          type: string
-        numeroCivico:
-          type: string
-    Consolato:
-      type: object
-      properties:
-        codiceConsolato:
-          type: string
-        descrizioneConsolato:
-          type: string
-    ConsultaResidenzaANPRError:
+        residentialAddresses:
+          type: array
+          items:
+            type: object
+            properties:
+              description:
+                type: string
+              at:
+                type: string
+              address:
+                type: string
+              zip:
+                type: string
+              municipality:
+                type: string
+              municipalityDetails:
+                type: string
+              province:
+                type: string
+              foreignState:
+                type: string
+    GetAddressANPRError:
       type: object
       properties:
         status:
